--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,10 +12,13 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+  html {
+    color-scheme: dark;
+  }
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Franklin Gothic Medium';
 }
