--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,10 +7,8 @@
   --foreground: #171717;
 }
 
-
-
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: black;
+  background-color: black;
   font-family: 'Franklin Gothic Medium';
 }
